--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>IOhannes m zmölnig's GitLab page #2</title>
 </head>
-<body></body>
+<body>
+    <h1>this is my personal demo page</h1>
+    lore ipsum bla bla bla
+</body>
 </html>
