--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>IEM's Pure Data page</title>
+<title>IEM's Pure Data page #1</title>
 </head>
 <body>
 </body>
