--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>	 
 <meta http-equiv="Content-Type" content="text/html">
-<link rel="stylesheet" type="text/css" href="http://pd.iem.sh/defaults/pd.iem.sh-v0.1.css" media="screen">
-<link rel="icon" type="image/png" href="http://pd.iem.sh/defaults/favicon.ico">  
+<link rel="stylesheet" type="text/css" href="https://pd.iem.sh/defaults/pd.iem.sh-v0.1.css" media="screen">
+<link rel="icon" type="image/png" href="https://pd.iem.sh/defaults/favicon.ico">  
 </head>
 <body>
 <div class="butt">
@@ -24,6 +24,6 @@
 <p>If you find a bug, please report it on github, a link to it also available in the Help Menu.</p>
 <p>Finally, you can use the Help menu to find and install externals, for more details on how to do that, please refer to chapter 4 of Pd’s manual.</p>
 </div>
-<script src="http://pd.iem.sh/defaults/pd.iem.sh-v0.1.js"></script>
+<script src="https://pd.iem.sh/defaults/pd.iem.sh-v0.1.js"></script>
 </body>
 </html>
