--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
 
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../index.html">home</a> <a href="../index.html">up </a>
-<h2 id="pure-data">Pure Data</h2>
+<button class="btn-toggle-theme">&#9680;</button> <a href="https://pd.iem.sh">home</a> <a href="../index.html">up </a>
+<h1 id="pure-data">Pure Data</h1>
+<p><a class="green" href="http://puredata.info/downloads">Get Pure-Data</a></p>
 <p><a href="./welcome/index.html">Welcome to Pd</a></p>
 </div>
 <script src="https://pd.iem.sh/defaults/pd.iem.sh-v0.1.js"></script>
