--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -14,7 +14,7 @@
 
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../index.html">home</a> <a href="../index.html">up </a>
+<button class="btn-toggle-theme">&#9680;</button> <a href="https://pd.iem.sh">home</a> <a href="../index.html">up </a>
 <h2 id="welcome-to-pd">Welcome to Pd</h2>
 <p>You can reach the Pd mailing list for help, please subscribe to the <a href="https://lists.puredata.info/listinfo/pd-list">pd-list</a>. It is perfectly reasonable to post “beginner” questions there.</p>
 <p>There is a very extensive Pd community web site,  <a href="http://www.pure-data.info/">pure-data.info</a>, which aims to be the central resource for Pd, from documentation and downloads; to forums, member pages, and a patch exchange. A link to it is also available in the Help Menu.</p>
