--- a/public/building-on-windows/index.html
+++ b/public/building-on-windows/index.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../">home</a> <a href="../index.html">up </a>
+<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h2 id="building-on-windows-with-msys2">Building on Windows with Msys2</h2>
 <p>Download the 64-bit installer from:</p>
