--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="./">home</a> <a href="../index.html">up </a>
+<a href="./">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h1 id="pure-data">Pure Data</h1>
 <a class="green" href="http://puredata.info/downloads">Get Pure-Data</a>
