--- a/public/list-of-objects/bang/index.html
+++ b/public/list-of-objects/bang/index.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../../">home</a> <a href="../index.html">up </a>
+<a href="../../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h3 id="bang">[bang]</h3>
 <p>Outputs a &ldquo;bang&rdquo; message for whatever message it receives.</p>
