--- a/public/list-of-objects/index.html
+++ b/public/list-of-objects/index.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../">home</a> <a href="../index.html">up </a>
+<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h2 id="list-of-objects">List of objects</h2>
 <p>The following is a list of built-in objects in Pd. (Not included in this 
