--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../">home</a> <a href="../index.html">up </a>
+<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h2 id="welcome-to-pd">Welcome to Pd</h2>
 <p>You can reach the Pd mailing list for help, please subscribe to 
