--- a/public/list-of-objects/symbol/index.html
+++ b/public/list-of-objects/symbol/index.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="../../">home</a> <a href="../index.html">up </a>
+<a href="../../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h3 id="symbol">[symbol]</h3>
 <p>Store a symbol (i.e., string)</p>
