--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,38 @@
 <a href="./">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 <h1 id="pure-data">Pure Data</h1>
-<a class="green" href="http://puredata.info/downloads">Get Pure-Data</a>
-
-<p><a href="./welcome">Welcome to Pd</a></p>
-<p><a href="./list-of-objects/">List of objects</a></p>
-<p><a href="building-on-windows">Building on Windows</a></p>
+<h3 id="general">General</h3>
+<ul>
+<li><a href="http://puredata.info/downloads">Get Pd</a></li>
+<li><a href="./welcome">Welcome to Pd</a></li>
+<li><a href="./list-of-objects">List of objects</a></li>
+</ul>
+<h3 id="people">People</h3>
+<ul>
+<li><a href="https://lists.puredata.info/listinfo/pd-list">Pd-list</a></li>
+<li><a href="https://www.facebook.com/groups/puredata/">facebook</a></li>
+<li><a href="https://forum.pdpatchrepo.info/">pdpatchrepo</a></li>
+</ul>
+<h3 id="tutorials">Tutorials</h3>
+<ul>
+<li><a href="#">Tutorials</a></li>
+</ul>
+<h3 id="developer">Developer</h3>
+<ul>
+<li><a href="building-on-windows">Building Pd</a></li>
+<li><a href="https://github.com/pure-data/externals-howto">Writing C externals</a></li>
+<li><a href="https://github.com/pure-data/pd-lib-builder">pd-lib-builder</a></li>
+<li><a href="https://github.com/libpd/libpd">libpd</a></li>
+</ul>
+<h3 id="graphics">Graphics</h3>
+<ul>
+<li><a href="http://gem.iem.at/">Gem</a></li>
+<li><a href="https://github.com/cuinjune/Ofelia">Ofelia</a></li>
+</ul>
+<h3 id="arduino">Arduino</h3>
+<ul>
+<li><a href="https://github.com/pd-externals/pduino">pduino</a></li>
+</ul>
 
 
 </div>
