--- a/public/index.html
+++ b/public/index.html
@@ -13,41 +13,54 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<a href="./">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+ <a href="./"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+
+<hr style="margin: 1px 0px;"> 
+
+<p style="margin: 0px;"><small><sub>_index.md</sub></small></p>
+
 
 <h1 id="pure-data">Pure Data</h1>
 <h3 id="general">General</h3>
 <ul>
-<li><a href="http://puredata.info/downloads">Get Pd</a></li>
-<li><a href="./welcome">Welcome to Pd</a></li>
-<li><a href="./list-of-objects">List of objects</a></li>
+<li><a href="http://puredata.info/downloads"><strong>Get Pd</strong></a></li>
+<li><a href="./welcome"><strong>Welcome to Pd</strong></a></li>
+<li><a href="./list-of-objects"><strong>List of objects</strong></a></li>
 </ul>
 <h3 id="people">People</h3>
 <ul>
-<li><a href="https://lists.puredata.info/listinfo/pd-list">Pd-list</a></li>
-<li><a href="https://www.facebook.com/groups/puredata/">facebook</a></li>
-<li><a href="https://forum.pdpatchrepo.info/">pdpatchrepo</a></li>
+<li><a href="https://lists.puredata.info/listinfo/pd-list"><strong>Pd-list</strong></a></li>
+<li><a href="https://www.facebook.com/groups/puredata/"><strong>facebook</strong></a></li>
+<li><a href="https://forum.pdpatchrepo.info/"><strong>pdpatchrepo</strong></a></li>
 </ul>
 <h3 id="tutorials">Tutorials</h3>
 <ul>
-<li><a href="#">Tutorials</a></li>
+<li><a href="#"><strong>Tutorials</strong></a></li>
 </ul>
 <h3 id="developer">Developer</h3>
 <ul>
-<li><a href="building-on-windows">Building Pd</a></li>
-<li><a href="https://github.com/pure-data/externals-howto">Writing C externals</a></li>
-<li><a href="https://github.com/pure-data/pd-lib-builder">pd-lib-builder</a></li>
-<li><a href="https://github.com/libpd/libpd">libpd</a></li>
+<li><a href="building-on-windows"><strong>Building Pd</strong></a></li>
+<li><a href="https://github.com/pure-data/externals-howto"><strong>Writing C externals</strong></a></li>
+<li><a href="https://github.com/pure-data/pd-lib-builder"><strong>pd-lib-builder</strong></a></li>
+<li><a href="https://github.com/libpd/libpd"><strong>libpd</strong></a></li>
 </ul>
 <h3 id="graphics">Graphics</h3>
 <ul>
-<li><a href="http://gem.iem.at/">Gem</a></li>
-<li><a href="https://github.com/cuinjune/Ofelia">Ofelia</a></li>
+<li><a href="http://gem.iem.at/"><strong>Gem</strong></a></li>
+<li><a href="https://github.com/cuinjune/Ofelia"><strong>Ofelia</strong></a></li>
 </ul>
 <h3 id="arduino">Arduino</h3>
 <ul>
-<li><a href="https://github.com/pd-externals/pduino">pduino</a></li>
+<li><a href="https://github.com/pd-externals/pduino"><strong>pduino</strong></a></li>
 </ul>
+<br>
+<br>
+<hr>
+<blockquote>
+<p><small><sub>made with <a href="https://gohugo.io/" target="_blank"><strong>HUGO</strong></a> | hosted at <a href="https://iem.kug.ac.at/institut-fuer-elektronische-musik-und-akustik-iem.html" target="_blank"><strong>IEM</strong></a></sub></small></p>
+</blockquote>
+
+
 
 
 </div>
