--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -12,7 +12,12 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+ <a href="../"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+
+<hr style="margin: 1px 0px;"> 
+
+<p style="margin: 0px;"><small><sub>welcome\index.md</sub></small></p>
+
 
 <h2 id="welcome-to-pd">Welcome to Pd</h2>
 <p>You can reach the Pd mailing list for help, please subscribe to 
