--- a/public/building-on-windows/index.html
+++ b/public/building-on-windows/index.html
@@ -12,7 +12,12 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+ <a href="../"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+
+<hr style="margin: 1px 0px;"> 
+
+<p style="margin: 0px;"><small><sub>building-on-windows.md</sub></small></p>
+
 
 <h2 id="building-on-windows-with-msys2">Building on Windows with Msys2</h2>
 <p>Download the 64-bit installer from:</p>
