--- a/public/list-of-objects/index.html
+++ b/public/list-of-objects/index.html
@@ -12,7 +12,12 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<a href="../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+ <a href="../"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+
+<hr style="margin: 1px 0px;"> 
+
+<p style="margin: 0px;"><small><sub>list-of-objects\_index.md</sub></small></p>
+
 
 <h2 id="list-of-objects">List of objects</h2>
 <p>The following is a list of built-in objects in Pd. (Not included in this 
