--- a/public/list-of-objects/int/index.html
+++ b/public/list-of-objects/int/index.html
@@ -12,7 +12,12 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<a href="../../">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+ <a href="../../"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+
+<hr style="margin: 1px 0px;"> 
+
+<p style="margin: 0px;"><small><sub>list-of-objects\int.md</sub></small></p>
+
 
 <h3 id="int">[int]</h3>
 <p>Store an integer</p>
